src/parse/common/GPoMvParser.java
// Generated from GPoMv.g4 by ANTLR 4.4
package parse.common;
   
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GPoMvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, MODULE=15, ENDMODULE=16, 
		INIT=17, TRANS=18, LABELS=19, K_INT=20, K_DOUBLE=21, K_FLOAT=22, K_BOOLEAN=23, 
		K_VOID=24, ID=25, NUMBER=26, FLOAT=27, INT=28, STRING=29, BOOL=30, EQUAL=31, 
		BRACELEFT=32, BRACERIGHT=33, BRACKETLEFT=34, BRACKETRIGHT=35, SEMICONLON=36, 
		COLON=37, DOTDOT=38, MUL=39, DIV=40, ADD=41, SUB=42, WS=43, COMMENT=44, 
		LINE_COMMENT=45, JING_COMMENT=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "')'", "','", "'('", "'if'", "'<'", "'global'", "'!='", 
		"'>'", "'then'", "'else'", "'=='", "'|'", "'!'", "'Moudle'", "'End Moudle'", 
		"'init'", "'->'", "'Label'", "'int'", "'double'", "'float'", "'boolean'", 
		"'void'", "ID", "NUMBER", "FLOAT", "INT", "STRING", "BOOL", "'='", "'{'", 
		"'}'", "'['", "']'", "';'", "':'", "'..'", "'*'", "'/'", "'+'", "'-'", 
		"WS", "COMMENT", "LINE_COMMENT", "JING_COMMENT"
	};
	public static final int
		RULE_file = 0, RULE_moduleType = 1, RULE_moudle = 2, RULE_statement = 3, 
		RULE_block = 4, RULE_varDecl = 5, RULE_stateDefine = 6, RULE_varName = 7, 
		RULE_varStart = 8, RULE_varEnd = 9, RULE_varInit = 10, RULE_transferStat = 11, 
		RULE_transLable = 12, RULE_transferChildStatLeft = 13, RULE_transferChildStatRight = 14, 
		RULE_labelSet = 15, RULE_labelStat = 16, RULE_labelCondition = 17, RULE_ifStat = 18, 
		RULE_globalVarDecl = 19, RULE_varType = 20, RULE_expr = 21, RULE_exprList = 22;
	public static final String[] ruleNames = {
		"file", "moduleType", "moudle", "statement", "block", "varDecl", "stateDefine", 
		"varName", "varStart", "varEnd", "varInit", "transferStat", "transLable", 
		"transferChildStatLeft", "transferChildStatRight", "labelSet", "labelStat", 
		"labelCondition", "ifStat", "globalVarDecl", "varType", "expr", "exprList"
	};

	@Override
	public String getGrammarFileName() { return "GPoMv.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	/**************************************************************/
	// Add by dc, only hints
	/** "memory" for our calculator; variable/value pairs go here */
	Map<String, Integer> memory = new HashMap<String, Integer>();

	int eval(int left, int op, int right) {
	    switch ( op ) {
	        case MUL : return left * right;
	        case DIV : return left / right;
	        case ADD : return left + right;
	        case SUB : return left - right;
	    }
	    return 0;
	}
	// new block

	/**************************************************************/

	public GPoMvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<GlobalVarDeclContext> globalVarDecl() {
			return getRuleContexts(GlobalVarDeclContext.class);
		}
		public MoudleContext moudle(int i) {
			return getRuleContext(MoudleContext.class,i);
		}
		public GlobalVarDeclContext globalVarDecl(int i) {
			return getRuleContext(GlobalVarDeclContext.class,i);
		}
		public List<MoudleContext> moudle() {
			return getRuleContexts(MoudleContext.class);
		}
		public ModuleTypeContext moduleType() {
			return getRuleContext(ModuleTypeContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); moduleType();
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(47); globalVarDecl();
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53); moudle();
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 || _la==MODULE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GPoMvParser.ID, 0); }
		public ModuleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterModuleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitModuleType(this);
		}
	}

	public final ModuleTypeContext moduleType() throws RecognitionException {
		ModuleTypeContext _localctx = new ModuleTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoudleContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode MODULE() { return getToken(GPoMvParser.MODULE, 0); }
		public TerminalNode ENDMODULE() { return getToken(GPoMvParser.ENDMODULE, 0); }
		public TerminalNode ID() { return getToken(GPoMvParser.ID, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MoudleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moudle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterMoudle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitMoudle(this);
		}
	}

	public final MoudleContext moudle() throws RecognitionException {
		MoudleContext _localctx = new MoudleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moudle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(MODULE);
			setState(61); match(ID);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__0) | (1L << LABELS) | (1L << K_INT) | (1L << K_FLOAT) | (1L << K_BOOLEAN) | (1L << ID) | (1L << NUMBER) | (1L << BRACELEFT) | (1L << BRACKETLEFT) | (1L << SUB))) != 0)) {
				{
				{
				setState(62); statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68); match(ENDMODULE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LabelStatContext labelStat() {
			return getRuleContext(LabelStatContext.class,0);
		}
		public StateDefineContext stateDefine() {
			return getRuleContext(StateDefineContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LabelSetContext labelSet() {
			return getRuleContext(LabelSetContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public TransferStatContext transferStat() {
			return getRuleContext(TransferStatContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70); block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); varDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); stateDefine();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73); transferStat();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74); labelSet();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75); labelStat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(76); ifStat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(77); expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(BRACELEFT);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__0) | (1L << LABELS) | (1L << K_INT) | (1L << K_FLOAT) | (1L << K_BOOLEAN) | (1L << ID) | (1L << NUMBER) | (1L << BRACELEFT) | (1L << BRACKETLEFT) | (1L << SUB))) != 0)) {
				{
				{
				setState(81); statement();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87); match(BRACERIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(GPoMvParser.ID, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDecl);
		try {
			setState(100);
			switch (_input.LA(1)) {
			case K_INT:
			case K_FLOAT:
			case K_BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(89); varType();
				setState(90); match(ID);
				setState(91); match(EQUAL);
				setState(92); expr(0);
				setState(93); match(SEMICONLON);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); match(ID);
				setState(96); match(EQUAL);
				setState(97); expr(0);
				setState(98); match(SEMICONLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateDefineContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode INIT() { return getToken(GPoMvParser.INIT, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public StateDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterStateDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitStateDefine(this);
		}
	}

	public final StateDefineContext stateDefine() throws RecognitionException {
		StateDefineContext _localctx = new StateDefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stateDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); varName();
			setState(103); match(COLON);
			setState(104); match(BRACKETLEFT);
			setState(105); expr(0);
			setState(106); match(DOTDOT);
			setState(107); expr(0);
			setState(108); match(BRACKETRIGHT);
			setState(111);
			_la = _input.LA(1);
			if (_la==INIT) {
				{
				setState(109); match(INIT);
				setState(110); expr(0);
				}
			}

			setState(113); match(SEMICONLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GPoMvParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitVarName(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarStartContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GPoMvParser.INT, 0); }
		public VarStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterVarStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitVarStart(this);
		}
	}

	public final VarStartContext varStart() throws RecognitionException {
		VarStartContext _localctx = new VarStartContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varStart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarEndContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GPoMvParser.INT, 0); }
		public VarEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterVarEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitVarEnd(this);
		}
	}

	public final VarEndContext varEnd() throws RecognitionException {
		VarEndContext _localctx = new VarEndContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varEnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarInitContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GPoMvParser.INT, 0); }
		public VarInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterVarInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitVarInit(this);
		}
	}

	public final VarInitContext varInit() throws RecognitionException {
		VarInitContext _localctx = new VarInitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_varInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransferStatContext extends ParserRuleContext {
		public TransferChildStatLeftContext transferChildStatLeft() {
			return getRuleContext(TransferChildStatLeftContext.class,0);
		}
		public TransferChildStatRightContext transferChildStatRight() {
			return getRuleContext(TransferChildStatRightContext.class,0);
		}
		public TerminalNode TRANS() { return getToken(GPoMvParser.TRANS, 0); }
		public TransLableContext transLable() {
			return getRuleContext(TransLableContext.class,0);
		}
		public TransferStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transferStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterTransferStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitTransferStat(this);
		}
	}

	public final TransferStatContext transferStat() throws RecognitionException {
		TransferStatContext _localctx = new TransferStatContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_transferStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); transLable();
			setState(124); transferChildStatLeft();
			setState(125); match(TRANS);
			setState(126); transferChildStatRight();
			setState(127); match(SEMICONLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransLableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GPoMvParser.ID, 0); }
		public TransLableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transLable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterTransLable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitTransLable(this);
		}
	}

	public final TransLableContext transLable() throws RecognitionException {
		TransLableContext _localctx = new TransLableContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_transLable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(BRACKETLEFT);
			setState(131);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(130); match(ID);
				}
			}

			setState(133); match(BRACKETRIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransferChildStatLeftContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TransferChildStatLeftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transferChildStatLeft; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterTransferChildStatLeft(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitTransferChildStatLeft(this);
		}
	}

	public final TransferChildStatLeftContext transferChildStatLeft() throws RecognitionException {
		TransferChildStatLeftContext _localctx = new TransferChildStatLeftContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_transferChildStatLeft);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransferChildStatRightContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NUMBER(int i) {
			return getToken(GPoMvParser.NUMBER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(GPoMvParser.NUMBER); }
		public TransferChildStatRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transferChildStatRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterTransferChildStatRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitTransferChildStatRight(this);
		}
	}

	public final TransferChildStatRightContext transferChildStatRight() throws RecognitionException {
		TransferChildStatRightContext _localctx = new TransferChildStatRightContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_transferChildStatRight);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(NUMBER);
			setState(139);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(138); match(COLON);
				}
			}

			setState(141); expr(0);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ADD) {
				{
				{
				setState(142); match(ADD);
				setState(143); match(NUMBER);
				setState(144); match(COLON);
				setState(145); expr(0);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelSetContext extends ParserRuleContext {
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public TerminalNode LABELS() { return getToken(GPoMvParser.LABELS, 0); }
		public LabelSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).enterLabelSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GPoMvListener ) ((GPoMvListener)listener).exitLabelSet(this);
		}
	}

	public final LabelSetContext labelSet() throws RecognitionException {
		LabelSetContext _localctx = new LabelSetContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_labelSet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); match(LABELS);
			setState(152); match(COLON);
			setState(153); match(BRACKETLEFT);
			setState(154); exprList();
			setState(155); match(BRACKETRIGHT);
			setState(156); match(SEMICONLON);
			}
		}
